fix: 한글 인코딩 문제로 삭제 안 되는 문제 해결 #58